--- a/index.html
+++ b/index.html
@@ -49,9 +49,20 @@
                     <input type="text" placeholder="1/10/2010" id="datetime" />
                   </li>
                   <li class="list-group-item bg-dark">
-                     <button id="filter-btn" type="button" class="btn btn-dark">
-                       Filter Table
-                     </button>
+                    <label for="city">Enter a City</label>
+                    <input type="text" placeholder="benton" id="city" />
+                  </li>
+                  <li class="list-group-item bg-dark">
+                    <label for="state">Enter a state</label>
+                    <input type="text" placeholder="ar" id="state" />
+                  </li>
+                  <li class="list-group-item bg-dark">
+                    <label for="country">Enter a country</label>
+                    <input type="text" placeholder="us" id="country" />
+                  </li>
+                  <li class="list-group-item bg-dark">
+                    <label for="shape">Enter a shape</label>
+                    <input type="text" placeholder="light" id="country" />
                   </li>
                 </ul>
                </form>
